Remove unnecessary files and fix bug id

--- a/cadastro_usuarios/app_cadastro_usuarios/templates/usuarios/usuario.html
+++ b/cadastro_usuarios/app_cadastro_usuarios/templates/usuarios/usuario.html
@@ -6,7 +6,7 @@
             <th>idade</th>
         {% for usuarios in usuarios %}
         </tr>
-            <th>{{usuarios.id}}</th>
+            <th>{{usuarios.id_usuario}}</th>
             <th>{{usuarios.nome}}</th>
             <th>{{usuarios.idade}}</th>
         </tr>
